# new_tech

./: Makefile  README.md  README_en.md  conftest.py  pyproject.toml  pytest.ini
.github/: release-drafter.yml
.github/workflows/: branch_name_verifier.yml  finding_changed_package.yml  lint.yaml  release-drafter.yml  test.yaml
CausalNLP/: explanation_jp.md  explnation_en.md
context/: Dockerfile
context/cpu/: docker-compose.yml
context/gpu/: docker-compose.yml
libs/abeja-toolkit/notebook_exporter/: README.md  export.py  pyproject.toml
libs/abeja-toolkit/notebook_exporter/src/notebook_exporter/: notion.py
libs/abeja-toolkit/notion_extension/: README.md  pyproject.toml
libs/abeja-toolkit/spreadsheet/: README.md  pyproject.toml
libs/abeja-toolkit/spreadsheet/src/spreadsheet/: sheet.py  utils.py
project_module/: pyproject.toml
scripts/: sync_dsg-project-template.sh  sync_tools.sh
