[project]
name = "notebook-exporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "taikinman", email = "101960796+taikinman@users.noreply.github.com" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "google>=3.0",
    "google-api-python-client>=2.151",
    "google-auth-httplib2>=0.2",
    "google-cloud-secret-manager>=2.21",
    "google-crc32c>=1.6",
    "notion-extension",
    "pillow>=11.0",
    "pydantic>=2.9",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "mypy>=1.15.0",
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notebook_exporter"]

[tool.uv.sources]
notion-extension = { workspace = true, editable = true }
