[project]
name = "notion-extension"
version = "0.2.2"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "taikinman", email = "101960796+taikinman@users.noreply.github.com" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "notion-client>=2.2",
    "pydantic>=2.9",
]

[dependency-groups]
dev = [
    "ipykernel>=6.30.1",
    "mypy>=1.15.0",
    "pytest>=8.4.2",
    "pytest-cov>=6.2.1",
    "ruff>=0.11.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/notion_extension"]
